--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -1,23 +1,23 @@
 {
   "account.settings.message.duplicate.tpa.provider": "The {provider} account you selected is already linked to another {siteName} account.",
   "account.settings.message.managed.settings": "Your profile settings are managed by {managerTitle}. Contact your administrator or {support} for help.",
-  "account.settings.message.managed.settings.support": "support",
-  "account.settings.page.heading": "Account Settings",
-  "account.settings.loading.message": "Loading...",
-  "account.settings.loading.error": "Error: {error}",
+  "account.settings.message.managed.settings.support": "поддержка",
+  "account.settings.page.heading": "Настройки учетной записи",
+  "account.settings.loading.message": "Загрузка...",
+  "account.settings.loading.error": "Ошибка: {error}",
   "account.settings.banner.beta.language": "You have set your language to {beta_language}, which is currently not fully translated. You can help us translate this language fully by joining the Transifex community and adding translations from English for learners that speak {beta_language}.",
   "account.settings.banner.beta.language.action.switch.back": "Switch Back to {previous_language}",
   "account.settings.banner.beta.language.action.help.translate": "Help Translate into {beta_language}",
-  "account.settings.section.account.information": "Account Information",
-  "account.settings.section.account.information.description": "These settings include basic information about your account.",
-  "account.settings.section.profile.information": "Profile Information",
-  "account.settings.section.demographics.information": "Optional Information",
-  "account.settings.section.site.preferences": "Site Preferences",
-  "account.settings.section.linked.accounts": "Linked Accounts",
+  "account.settings.section.account.information": "Информация Об Учетной Записи",
+  "account.settings.section.account.information.description": "Эти настройки включают основную информацию о вашей учетной записи.",
+  "account.settings.section.profile.information": "Информация профиля",
+  "account.settings.section.demographics.information": "Дополнительная информация",
+  "account.settings.section.site.preferences": "Настройки сайта",
+  "account.settings.section.linked.accounts": "Связанные аккаунты",
   "account.settings.section.linked.accounts.description": "You can link your identity accounts to simplify signing in to {siteName}.",
-  "account.settings.field.username": "Username",
+  "account.settings.field.username": "Имя пользователя",
   "account.settings.field.username.help.text": "The name that identifies you on {siteName}. You cannot change your username.",
-  "account.settings.field.full.name": "Full name",
+  "account.settings.field.full.name": "ФИО",
   "account.settings.field.full.name.empty": "Add name",
   "account.settings.field.full.name.help.text": "The name that is used for ID verification and that appears on your certificates.",
   "account.settings.field.full.name.help.text.default": "The name that appears on your public profile.",
@@ -98,11 +98,11 @@
   "account.settings.field.time.zone.default": "Default (Local Time Zone)",
   "account.settings.field.time.zone.all": "All time zones",
   "account.settings.field.time.zone.country": "Country time zones",
-  "account.settings.section.social.media": "Social Media Links",
+  "account.settings.section.social.media": "Ссылки на социальные сети",
   "account.settings.section.social.media.description": "Optionally, link your personal accounts to the social media icons on your {siteName} profile.",
   "account.settings.field.social.platform.name.linkedin": "LinkedIn",
   "account.settings.field.social.platform.name.linkedin.empty": "Add LinkedIn profile",
-  "account.settings.jump.nav.delete.account": "Delete My Account",
+  "account.settings.jump.nav.delete.account": "Удалите мой аккаунт",
   "account.settings.field.social.platform.name.twitter": "Twitter",
   "account.settings.field.social.platform.name.twitter.empty": "Add Twitter profile",
   "account.settings.field.social.platform.name.facebook": "Facebook",
